--- a/ci/pipeline.properties
+++ b/ci/pipeline.properties
@@ -1,6 +1,6 @@
 # Java versions
-java.main.tag=17.0.12_7-jdk-focal
-java.next.tag=22.0.2_9-jdk-jammy
+java.main.tag=17.0.13_11-jdk-focal
+java.next.tag=23.0.1_11-jdk-noble
 
 # Docker container images - standard
 docker.java.main.image=library/eclipse-temurin:${java.main.tag}
@@ -11,6 +11,7 @@ docker.mongodb.4.4.version=4.4.25
 docker.mongodb.5.0.version=5.0.21
 docker.mongodb.6.0.version=6.0.10
 docker.mongodb.7.0.version=7.0.2
+docker.mongodb.8.0.version=8.0.0
 
 # Supported versions of Redis
 docker.redis.6.version=6.2.13
