--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 
     <dependencyManagement>
         <dependencies>
+
             <dependency>
                 <groupId>org.testcontainers</groupId>
                 <artifactId>testcontainers-bom</artifactId>
@@ -38,6 +39,15 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+
+          <dependency>
+            <groupId>tools.jackson</groupId>
+            <artifactId>jackson-bom</artifactId>
+            <version>3.0.0-rc1</version>  <!-- Use the latest version -->
+            <scope>import</scope>
+            <type>pom</type>
+          </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -113,17 +123,29 @@
             <scope>test</scope>
         </dependency>
 
+
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-joda</artifactId>
             <version>${jackson-joda}</version>
-            <scope>test</scope>
+          <!--  <scope>test</scope> -->
         </dependency>
 
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
         </dependency>
+
+  <dependency>
+    <groupId>tools.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+  </dependency>
+
+  <dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-annotations</artifactId>
+  </dependency>
+
 
         <dependency>
             <groupId>joda-time</groupId>
