--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
-name: CI Build
+name: CI 5.5.x
 
 on:
   workflow_dispatch:
   push:
-    branches: [ main, 6.0.x, 5.5.x, 'issue/**' ]
+    branches: [ 5.5.x, 'issue/5.5.x/**' ]
 
 permissions: read-all
 
@@ -17,9 +17,9 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - name: Setup Java and Maven
-        uses: spring-projects/spring-data-build/actions/setup-maven@4.0.x
+        uses: spring-projects/spring-data-build/actions/setup-maven@3.5.x
         with:
           java-version: ${{ matrix.java-version }}
           develocity-access-key: '${{ secrets.DEVELOCITY_ACCESS_KEY }}'
       - name: Build
-        uses: spring-projects/spring-data-build/actions/maven-build@4.0.x
+        uses: spring-projects/spring-data-build/actions/maven-build@3.5.x
