--- a/.github/workflows/snapshots.yml
+++ b/.github/workflows/snapshots.yml
@@ -3,7 +3,7 @@ name: Snapshots
 on:
   workflow_dispatch:
   push:
-    branches: [ main, 6.0.x, 5.5.x, 'issue/**' ]
+    branches: [ 5.5.x, 'issue/5.5.x/**' ]
 
 permissions: read-all
 
@@ -15,11 +15,11 @@ jobs:
     steps:
       - uses: actions/checkout@v6
       - name: Setup Java and Maven
-        uses: spring-projects/spring-data-build/actions/setup-maven@4.0.x
+        uses: spring-projects/spring-data-build/actions/setup-maven@3.5.x
         with:
           develocity-access-key: '${{ secrets.DEVELOCITY_ACCESS_KEY }}'
       - name: Deploy to Artifactory
-        uses: spring-projects/spring-data-build/actions/maven-artifactory-deploy@4.0.x
+        uses: spring-projects/spring-data-build/actions/maven-artifactory-deploy@3.5.x
         with:
           build-name: 'spring-data-couchbase'
           username: '${{ secrets.ARTIFACTORY_USERNAME }}'
